# api-local-TTS-server

./: .gitignore  GEMINI.md  HARDWARE.md  README.md  TEAM_HUB.md  TEAM_MEMORY.json  TEAM_MEMORY.md  app.py  benchmark_fanny.py  constraints.txt  debug_fanny.py  generate_fanny_profile.py  init_gemini_team.sh  prestanda_baseline.txt  pyproject.toml  pytest.ini  run_server.sh  setup.sh  setup_rocm.sh  smoketest.sh  verify_output.py
.gemini/ralph/: state.json
.gemini/subagents/devsecops/: SYSTEM.md
.gemini/subagents/lead_engineer/: SYSTEM.md
.gemini/subagents/product_owner/: SYSTEM.md
.gemini/subagents/qa_engineer/: SYSTEM.md
.gemini/subagents/scrum_master/: SYSTEM.md
scripts/: setup-windows.ps1
src/: api_server.py  app.py  audio_config.py  fish_wrapper.py  inference_engine.py  llm_engine.py  main.py  tts_engine.py  tts_engine_mms.py  utils.py
src/adapters/: __init__.py  base.py  linux.py  windows.py
tests/: conftest.py  test_api.py  verify_1.py  verify_api.py  verify_chat.py  verify_env.py  verify_hybrid.py  verify_llm.py  verify_m1.py  verify_mms.py  verify_tts.py  verify_tts_silero.py
tests/e2e/: test_fanny_smoke.py
tests/integration/: test_api.py  test_api_endpoints.py  test_api_layer.py  test_audio_validity.py  test_full_chain.py  test_gpu_availability.py  test_llm.py  test_stress_load.py  test_transcoding.py  test_tts_backends.py
tests/integration/benchmarks/: test_fish_s2_generate.py  test_fish_s2_load.py  test_fish_s2_load_optimized.py
tests/unit/: test_mms.py  test_platform_adapter.py  test_tts_factory.py  test_tts_factory_mock.py
