[project]
name = "api-local-tts-clean"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "scipy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "fish-speech",
    "pyaudio",
    "torch",
    "torchaudio",
]

[tool.uv.sources]
torch = { path = "torch-2.9.1+rocm7.2.1.lw.gitff65f5bc-cp312-cp312-linux_x86_64.whl" }
torchaudio = { path = "torchaudio-2.9.0+rocm7.2.1.gite3c6ee2b-cp312-cp312-linux_x86_64.whl" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
