[project]
name = "api-local-tts-clean"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "transformers",
    "scipy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "fish-speech",
    "pyaudio",
    "torch",
    "torchaudio",
    "triton; sys_platform == 'linux'",
    "torchvision",
    "ruff",
    "torch-directml; sys_platform == 'win32'",
]

[tool.uv]
# Removed custom sources to allow cross-platform installation via pip/uv

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
